    syntax error.
  * $thing->mo now always returns a meta instance object.  This allows
    the meta object to DWIM on plain strings which previously would be
    treated as classes and return the meta class object.
  * The guaranteed range of gm/localtime() has been reduced to avoid
    depending on Time::y2038 if possible.
  * $thing->perl is now $thing->mo->perl and works on everything.

  New Features
  * $thing->mo->is_equal($other) universal equality method. [brunov]
  * $thing->mc has been added to always return a meta class object.
    This allows disambiguation when $thing could be considered a
    class name.
  * new autoboxed methods: %hash->diff() and %hash->intersect() [brunov]
  * Added $thing->mo->dump to dump objects in multiple formats
    including YAML and JSON.

  Fixes
  * Update dep on autovivification to one that works on 5.11 [schwern]
  * Update autobox::Core dep to clarify scalar vs list context returns.
  * Fix taint test failing with Test::More 0.95_01. [schwern]
  * Fix time compat test failing because of unknown time zones. [schwern]
  * Time::y2038 is only required if the built in time functions
    are not up to task. [schwern]

  Optimizations
  * Optimize @array->intersect() and @array->diff() when @array contains no refs.
    [brunov]


1.1.0  Tue Mar  2 19:09:49 PST 2010
  New Features
  * print() and say() now work on hashes, time(), localtime() and gmtime().
  * $obj->mo->checksum will return a checksum for the contents of any object.
  * Added $path->path2module and $module->module2path

  Bugs
  * alias() was still being exported.
  * Work around DateTime::TimeZone not being able to determine the local
    time zone on FreeBSD and possibly others.
  * localtime() is less suseptable to the DateTime distant year DOS attack.

  Docs
  * Document that carp() and croak() are exported.


1.0.0  Thu Feb 25 21:56:47 PST 2010
  New Features
  * @array->first() now takes a regex like @array->grep() [github 93] (brunov)